- Fixed calendar wizard responsiveness on mobile and for non-Rock themes

--- a/RockWeb/Themes/Rock/Styles/theme.less
+++ b/RockWeb/Themes/Rock/Styles/theme.less
@@ -405,11 +405,10 @@ textarea,
 }
 
 .wizard {
-  margin: -35px;
-  margin-bottom: 35px;
+  margin: -5px -15px 35px -15px;
 
-  @media (max-width: @screen-md-min) {
-    margin-left: -12px;
+  @media (min-width: @screen-md-min) {
+    margin: -35px -35px 35px -35px;
   }
 }
 
@@ -1199,7 +1198,7 @@ body.navbar-side-open {
 
   .page-title {
     padding: 20px 15px;
-    margin: -5px -5px 5px -5px;
+    margin: -5px -15px 5px -15px;
     color: @pagetitle-text-color;
     background-color: @pagetitle-background;
     background-color: var(--pagetitle-background);
